--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.3.0'
+    implementation "org.thymeleaf.extras:thymeleaf-extras-springsecurity6"
     implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0"
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 
